--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,27 +11,12 @@
     android:gravity="center"
     tools:context="com.maxvalley.pantallavirtual.MainActivity">
 
-    <EditText
-        android:id="@+id/et_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_message"/>
-
-    <Button
-        android:id="@+id/btn_write"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_message"
-        android:layout_marginTop="10dp"
-        android:text="@string/message_write_tag"
-        style="@style/Widget.AppCompat.Button.Colored"/>
-
     <Button
         android:id="@+id/btn_read"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_write"
         android:layout_marginTop="10dp"
         android:text="@string/message_read_tag"
         style="@style/Widget.AppCompat.Button.Colored"/>
-</RelativeLayout>
+
+</LinearLayout>
