--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,24 @@
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:orientation="vertical"
     android:paddingTop="10dp"
     android:gravity="center"
+    android:background="@drawable/shape"
     tools:context="com.maxvalley.pantallavirtual.MainActivity">
 
     <Button
         android:id="@+id/btn_read"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/message_read_tag"
-        style="@style/Widget.AppCompat.Button.Colored"/>
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:text="EMPEZAR LA EXPERIENCIA"
+        android:textSize="19dp"
+        android:padding="10dp"
+        android:gravity="center"
+        android:textColor="#FFF"
+        android:background="@drawable/button"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
